# arcimboldo

./: .gitignore  CMakeLists.txt  PhotoDirModel.cpp  PhotoDirModel.hpp  images.qrc  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
Arcimboldo/: Arcimboldo.pro  MainWindow.ui
qml-ver/: CMakeLists.txt  PhotoDirModel.cpp  PhotoListItem.qml  main.cpp  main.qml  qml.qrc
qml-ver/src/: AppState.cpp  AppState.hpp  DirectoryPathValidator.cpp  DirectoryPathValidator.hpp  PhotoDirModel.cpp  PhotoDirModel.hpp  TargetDirectoryGenerator.cpp  TargetDirectoryGenerator.hpp  main.cpp
qmlrc/: qmldir
